--- a/backend/src/test/resources/application.properties
+++ b/backend/src/test/resources/application.properties
@@ -1,10 +1,17 @@
-spring.datasource.url=jdbc:h2://mem:db;DB_CLOSE_DELAY=-1/skyrise
+spring.application.name=backend
+# This is the property to specify the database and the driver here todolist is database name and mysql is driver
+spring.datasource.url=jdbc:mysql://localhost:3306/skyrise
 
-spring.datasource.username= sa
-spring.datasource.password= sa
+# These properties specify the data used for authentication and authorization for the database
+spring.datasource.username= skyrise_admin
+spring.datasource.password= skyrise_app_swe26
 
-spring.jpa.hibernate.ddl-auto=create-drop
+# This property is used to specify how we'll handle data ex:- update -> update the remaining data,
+# ex: create-drop -> everytime create new tables and delete on termination of the program
+spring.jpa.hibernate.ddl-auto=update
 
-spring.datasource.driver-class-name=org.h2.Driver
+# Driver Class for MySQL
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
+# This is used to show sql whenever any query is executed by hibernate
 spring.jpa.show-sql: true
