--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -3,8 +3,8 @@ spring.application.name=backend
 spring.datasource.url=jdbc:mysql://localhost:3306/skyrise
 
 # These properties specify the data used for authentication and authorization for the database
-spring.datasource.username= skyrise_admin
-spring.datasource.password= skyrise_app_swe26
+spring.datasource.username=
+spring.datasource.password=
 
 # This property is used to specify how we'll handle data ex:- update -> update the remaining data,
 # ex: create-drop -> everytime create new tables and delete on termination of the program
