--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,6 +22,7 @@
     "react-query": "^3.39.3",
     "react-router-dom": "^7.0.1",
     "react-scripts": "5.0.1",
+    "react-select": "^5.8.3",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
