--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,6 +22,7 @@
     "lucide-react": "^0.462.0",
     "react": "^18.3.1",
     "react-apexcharts": "^1.6.0",
+    "react-bootstrap": "^2.10.6",
     "react-circular-progressbar": "^2.1.0",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
