--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "apexcharts": "^4.1.0",
     "axios": "^1.7.8",
     "bootstrap": "^5.3.3",
+    "dayjs": "^1.11.13",
     "formik": "^2.4.6",
     "framer-motion": "^11.12.0",
     "frontend": "file:",
@@ -31,7 +32,7 @@
     "react-scripts": "5.0.1",
     "react-select": "^5.8.3",
     "web-vitals": "^2.1.4",
-    "yup": "^1.4.0",
+    "yup": "^1.5.0",
     "zustand": "^5.0.2"
   },
   "scripts": {
