--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -2,6 +2,9 @@ spring.application.name=backend
 # This is the property to specify the database and the driver here todolist is database name and mysql is driver
 spring.datasource.url= jdbc:mysql://localhost:3306/skyrise?serverTimezone=UTC
 
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.hibernate.ddl-auto=validate
 
 # These properties specify the data used for authentication and authorization for the database
 spring.datasource.username= skyrise_admin
